--- a/res/layout/item_photo.xml
+++ b/res/layout/item_photo.xml
@@ -19,19 +19,20 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="8dp"
         android:text="TextView" 
-        android:textSize="12sp" />
+        android:textSize="10sp" />
     
       <TextView
         android:id="@+id/tvTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/tvUser" 
         android:layout_marginTop="8dp"
-        android:gravity="right"
+        android:layout_gravity="right"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
+        android:drawableLeft="@drawable/timeicon"
+        android:drawablePadding="2dp"
         android:text="TextView" 
-        android:textSize="12sp" />
+        android:textSize="10sp" />
         
      <ImageView
         android:id="@+id/imagePhoto"
@@ -51,10 +52,11 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/imagePhoto"
         android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
         android:drawableLeft="@drawable/likeicon"
         android:drawablePadding="8dp"
         android:text="TextView" 
-        android:textSize="12sp" />
+        android:textSize="10sp" />
     
     <TextView
         android:id="@+id/tvCaption"
@@ -63,10 +65,11 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvLikes"
         android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
         android:ellipsize="end"
         android:maxLines="3"
         android:text="@string/default_caption" 
-        android:textSize="12sp" />
+        android:textSize="10sp" />
     
     <TextView
         android:id="@+id/tvComments"
@@ -74,10 +77,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/tvCaption"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="8dp"
         android:ellipsize="end"
         android:maxLines="10"
         android:text="@string/default_caption" 
-        android:textSize="12sp" />
+        android:textSize="10sp" />
     
 </RelativeLayout>
